@@ -8,6 +8,10 @@ CONFIG_NUTTX_NEWCONFIG=y
 # Build Setup
 #
 # CONFIG_EXPERIMENTAL is not set
+CONFIG_HOST_LINUX=y
+# CONFIG_HOST_OSX is not set
+# CONFIG_HOST_WINDOWS is not set
+# CONFIG_HOST_OTHER is not set
 
 #
 # Build Configuration
@@ -83,7 +87,11 @@ CONFIG_BOARD_LOOPSPERMSEC=100
 #
 # CONFIG_ARCH_NOINTC is not set
 # CONFIG_ARCH_DMA is not set
+# CONFIG_ARCH_IRQPRIO is not set
+# CONFIG_CUSTOM_STACK is not set
+# CONFIG_ADDRENV is not set
 # CONFIG_ARCH_STACKDUMP is not set
+# CONFIG_ENDIAN_BIG is not set
 
 #
 # Board Settings
@@ -165,7 +173,6 @@ CONFIG_PREALLOC_TIMERS=8
 #
 # Stack and heap information
 #
-# CONFIG_CUSTOM_STACK is not set
 CONFIG_IDLETHREAD_STACKSIZE=4096
 CONFIG_USERMAIN_STACKSIZE=4096
 CONFIG_PTHREAD_STACK_MIN=256
@@ -250,8 +257,10 @@ CONFIG_MM_REGIONS=1
 # Binary Formats
 #
 # CONFIG_BINFMT_DISABLE is not set
+# CONFIG_BINFMT_EXEPATH is not set
 # CONFIG_NXFLAT is not set
 # CONFIG_ELF is not set
+# CONFIG_PIC is not set
 # CONFIG_SYMTAB_ORDEREDBYNAME is not set
 
 #
@@ -274,9 +283,12 @@ CONFIG_ARCH_LOWPUTC=y
 CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_ARCH_ROMGETC is not set
 # CONFIG_ARCH_OPTIMIZED_FUNCTIONS is not set
+
+#
+# Basic CXX Support
+#
+# CONFIG_C99_BOOL8 is not set
 # CONFIG_HAVE_CXX is not set
-# CONFIG_HAVE_CXXINITIALIZE is not set
-# CONFIG_CXX_NEWLONG is not set
 
 #
 # Application Configuration
@@ -302,6 +314,7 @@ CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_EXAMPLES_HELLOXX is not set
 # CONFIG_EXAMPLES_JSON is not set
 # CONFIG_EXAMPLES_HIDKBD is not set
+# CONFIG_EXAMPLES_KEYPADTEST is not set
 # CONFIG_EXAMPLES_IGMP is not set
 # CONFIG_EXAMPLES_LCDRW is not set
 # CONFIG_EXAMPLES_MM is not set
@@ -323,6 +336,8 @@ CONFIG_EXAMPLES_OSTEST=y
 CONFIG_EXAMPLES_OSTEST_LOOPS=100
 CONFIG_EXAMPLES_OSTEST_STACKSIZE=8192
 CONFIG_EXAMPLES_OSTEST_NBARRIER_THREADS=8
+CONFIG_EXAMPLES_OSTEST_RR_RANGE=10000
+CONFIG_EXAMPLES_OSTEST_RR_RUNS=10
 # CONFIG_EXAMPLES_PASHELLO is not set
 # CONFIG_EXAMPLES_PIPE is not set
 # CONFIG_EXAMPLES_POLL is not set
